<resources>
    <string name="app_name" translatable="false">FitSim</string>
    <string name="admob_test_addunitid" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="profile">Profile</string>
    <string name="gym">Gym</string>
    <string name="nutrition">Nutrition</string>
    <string name="more">More</string>
    <string name="to_tired">I am to tired right now.</string>
    <string name="train">Start exercise</string>
    <string name="activity_to_demanding">%s is to demanding right now.</string>
    <string name="consume_nutrition">Consume</string>
    <string name="to_satured">I am satured.</string>
    <string name="cant_eat_nutrition">I had enough %s.</string>
    <string name="age">Age</string>
    <string name="size">Size</string>
    <string name="onboarding">Onboarding</string>
    <string name="create">Create athlete</string>
    <string name="anonymous">Anonymous</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="add_widget">Add widget</string>
    <string name="highscore">Highscore</string>
    <string name="no_data">No data available</string>
    <string name="energy">%s EP</string>
    <string name="experience">%1$s / %2$s XP.</string>
    <string name="ep_exp">%1$s EP, %2$s XP.</string>
    <string name="prot_carbs_fat">P: %1$sg, C: %2$sg, F: %3$sg</string>
    <string name="body">Body</string>
    <string name="level_skill">L: %1$s - %2$s</string>
    <string name="points">%s Points</string>
    <string name="muscles">Muscles</string>
    <string name="weight">Weight</string>
    <string name="weight_unit">%s kg</string>
    <string name="strength">Strength</string>
    <string name="simple_max_string">%1$s / %2$s</string>
    <string name="stamina">Stamina</string>
    <string name="calories">Required Calories</string>
    <string name="required_calories">%1$s / %2$s kcal</string>
    <string name="consumed_gram">%s g</string>
    <string name="proteine">Proteine</string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbohydrates</string>
    <string name="hello">Hello!</string>
    <string name="enter_data">Please enter your basic data.</string>
    <string name="ektomorph">Ektomorph</string>
    <string name="mesomorph">Mesomorph</string>
    <string name="endomorph">Endomorph</string>
    <string name="invalid_age">Your age should be between 1 and 100</string>
    <string name="invalid_data">Please enter valid data</string>
    <string name="weight_in_kg">Weight in kg</string>
    <string name="size_in_cm">Size in cm</string>
    <string name="bmi_result">BMI: %s</string>
    <string name="ffmi_result">FFMI: %s</string>
    <string name="kfa_in_percent">KFA in %</string>
    <string name="bmi">BMI</string>
    <string name="ffmi">FFMI</string>
    <string name="ep">EP</string>
    <string name="value_preview">%1$s (%2$s)</string>
    <string name="xp">XP</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="set_gender_male">Select male</string>
    <string name="set_gender_female">Select female</string>
    <string name="create_your_athlete">Create your athlete</string>
    <string name="current_energy">Current energy</string>
    <string name="show_profile">Show your profile</string>
    <string name="start_activity">Perform activity</string>
    <string name="eat_nutrition">Eat nutrition</string>
    <string name="disconnect_from_account">Disconnect %s</string>
    <string name="connect_with_account">Loggin with account</string>
</resources>
