<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="bmiPresenter"
            type="de.ironcoding.fitsim.ui.presenter.BmiPresenter"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_dark">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                style="@style/Text.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_m"
                android:textColor="@color/orange"
                android:text="@{bmiPresenter.bmi}"
                tools:text="BMI: 23.62"/>

            <TextView
                style="@style/Text.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_m"
                android:textColor="@color/white"
                android:text="@{bmiPresenter.info}"
                tools:text="@string/invalid_data"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_m">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:inputType="numberDecimal"
                    android:hint="@string/weight_in_kg"
                    android:layout_gravity="center"
                    android:text="@={bmiPresenter.weight}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_m">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:inputType="numberDecimal"
                    android:hint="@string/size_in_cm"
                    android:layout_gravity="center"
                    android:text="@={bmiPresenter.size}" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


    </LinearLayout>
</layout>
